# F_brain-Lvl2

./: .env  .gitignore  README.md  backup.sql  docker-compose.yaml  docker-compose.yml  package.json
.github/workflows/: cd.yml  ci.yml  dev.yml
client/: Dockerfile  index.html  package.json  vite.config.js
client/src/: App.jsx  App.tsx  index.html  main.jsx
client/src/hooks/: useGetCookie.js
client/src/pages/: Analytics.jsx  Depenses.css  Depenses.jsx  Home.css  Home.jsx  Tags.css  Tags.jsx
client/src/services/: api.js
client/vite-project/: vite.config.js
monitoring/: Dockerfile  grafana.ini  prometheus.yaml  prometheus.yml
proxy/: Dockerfile  default.conf  nginx.conf
server/: .env  Dockerfile  celery_app.py  db.sqlite3  pyproject.toml  requirements.txt
server/core/: settings.py
server/finance/: admin.py  models.py  serializers.py  urls.py  views.py
server/finance/migrations/: 0001_initial.py
server/myapp/: __init__.py  models.py  urls.py  views.py
server/server_conf/: __init__.py  asgi.py  celery_app.py  settings.py  urls.py  wsgi.py
