[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "MarteOued",email = "marteoued11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django (==4.0)",
    "django-prometheus (>=2.3.1,<3.0.0)",
    "celery (>=5.5.2,<6.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
